@@ -16,6 +16,7 @@ bochs (2.2-1) UNRELEASED; urgency=low
   * Update copyright year.
   * Update watch file version to 3 (no changes needed).
   * Use new QA SourceForge watch redirector.
+  * Use new dpkg-architecture variables for os and cpu.
   * C++ ABI transition.
     - Remove special case for m68k to use g++-3.4.
 
